--- a/pest_control_project_2/html/contact.html
+++ b/pest_control_project_2/html/contact.html
@@ -29,18 +29,18 @@
 <div class="preloader">
 	<div class="loading-container">
 		<div class="loading"></div>
-		<div id="loading-icon"><img src="images/loader.svg"></div>
+		<div id="loading-icon"><img src="images/logo_real.png"></div>
 	</div>
 </div>
 
 <!-- Header -->
 <header class="main-header">
-	<div class="header-sticky bg-section">
+<div class="header-sticky bg-section" style="background-color: #0f3d2e;">
 		<nav class="navbar navbar-expand-lg">
 			<div class="container">
 
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo_real.png" style="height:55px; width:auto;">
+					<img src="images/logo_real.png" style="height:70px; width:auto;">
 				</a>
 
 				<div class="collapse navbar-collapse main-menu">
@@ -67,7 +67,7 @@
 
 <!-- ================= CONTACT SECTION ================= -->
 
-<div class="page-contact-us contact-spacing">
+<div class="page-contact-us contact-spacing" style="margin-top: 140px;">
 	<div class="container">
 
 		<!-- Contact Cards -->
@@ -86,10 +86,9 @@
 
 					<div class="contact-info-item-content">
 						<p>اتصل بنا</p>
-													<h2>
-								<span dir="ltr">+218 92-4663890</span>
-							</a>
-							</h2>
+                        <h2>
+                            <a href="tel:+218924663890" dir="ltr">+218 92-4663890</a>
+                        </h2>
 					</div>
 				</div>
 			</div>
@@ -107,7 +106,10 @@
 
 					<div class="contact-info-item-content">
 						<p>راسلنا عبر البريد الإلكتروني</p>
-						<h2>info@domainname.com</h2>
+						<h2>
+							<a href="mailto:info@company.com">info@company.com</a>
+						</h2>
+
 					</div>
 				</div>
 			</div>
@@ -148,11 +150,11 @@
 
 			<div class="col-xl-3">
 				<div class="about-footer">
-					<h2>عن شركتنا</h2>
-					<p>نحن شركة موثوقة تقدم خدمات مكافحة الآفات مع حلول آمنة وفعالة.</p>
 
 					<div class="footer-social-links">
-						<a href="https://www.facebook.com/people/%25D8%25B4%25D8%25B1%25D9%2583%25D8%25A9-%25D8%25AD%25D9%2585%25D8%25A7%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A8%25D9%258A%25D8%25A6%25D8%25A9-%25D9%2584%25D9%2585%25D9%2583%25D8%25A7%25D9%2581%25D8%25AD%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A2%25D9%2581%25D8%25A7%25D8%25AA/61579325938061/?rdid=eGVCS2FJ2Xvgej39&share_url=https%253A%252F%252Fwww.facebook.com%252Fshare%252F17xwUfYVzc%252F"><i class="fa-brands fa-facebook-f"></i></a>
+<a href="https://www.facebook.com/people/%25D8%25B4%25D8%25A9-%25D8%25AD%25D9%2585%25D8%25A7%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A8%25D9%258A%25D8%25A6%25D8%25A9-%25D9%2584%25D9%2585%25D9%2583%25D8%25A7%25D9%2581%25D8%25AD%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A2%25D9%2581%25D8%25A7%25D8%25AA/61579325938061/?rdid=eGVCS2FJ2Xvgej39&share_url=https%253A%252F%252Fwww.facebook.com%252Fshare%252F17xwUfYVzc%252F">
+    <i class="fa-brands fa-facebook-f" style="font-size: 1.5em;"></i>
+</a>
 					</div>
 				</div>
 			</div>
@@ -172,7 +174,7 @@
 					<div class="footer-links">
 						<h3>ساعات العمل</h3>
 						<ul>
-							<li>السبت – الخميس: 9:00 صباحًا – 12:00 منتصف الليل/li>
+							<li>السبت – الخميس: 9:00 صباحًا – 12:00 منتصف الليل</li>
 							<li>الجمعة: مغلق</li>
 						</ul>
 					</div>
