--- a/pest_control_project_2/html/index.html
+++ b/pest_control_project_2/html/index.html
@@ -41,7 +41,7 @@
 	<div class="preloader">
 		<div class="loading-container">
 			<div class="loading"></div>
-			<div id="loading-icon"><img src="images/loader.svg" alt=""></div>
+			<div id="loading-icon"><img src="images/logo_real.png" alt=""></div>
 		</div>
 	</div>
 	<!-- Preloader End -->
@@ -54,7 +54,7 @@
 
 				<!-- Logo -->
 				<a class="navbar-brand" href="index.html">
-					<img src="images/logo_real.png" alt="Logo" style="height:55px; width:auto;">
+					<img src="images/logo_real.png" alt="Logo" style="height:70px; width:auto;">
 				</a>
 
 				<!-- Main Menu -->
@@ -97,7 +97,7 @@
                     <div class="hero-content">
                         <!-- Section Title Start -->
                         <div class="section-title">
-                            <h1 data-cursor="-opaque">نحمي المنازل بخبرة في مكافحة الآفات</h1>
+                            <h1 data-cursor="-opaque">نحمي المنازل والشركات بخبرة في مكافحة الآفات</h1>
                             <p class="wow fadeInUp" data-wow-delay="0.2s">يستخدم خبراؤنا المدربون حلولًا متقدمة وصديقة للبيئة للتعامل مع كل شيء من النمل الأبيض والقوارض إلى البعوض والصراصير.</p>
                         </div>
                         <!-- Section Title End -->
@@ -110,7 +110,7 @@
                                     <img src="images/icon-hero-body-item-1.svg" alt="">
                                 </div>
                                 <div class="hero-body-item-content">
-                                    <h2>علاجات آمنة وصديقة للبيئة</h2>
+                                    <h2>مبيدات آمنة وصديقة للبيئة</h2>
                                 </div>
                             </div>
                             <!-- Hero Info Item End -->
@@ -121,7 +121,7 @@
                                     <img src="images/icon-hero-body-item-2.svg" alt="">
                                 </div>
                                 <div class="hero-body-item-content">
-                                    <h2>علاجات آمنة وصديقة للبيئة</h2>
+                                    <h2>طرق مكافحة حديثة وفعالة</h2>
                                 </div>
                             </div>
                             <!-- Hero Info Item End -->
@@ -176,9 +176,10 @@
                     <!-- Section Title -->
                     <div class="section-title">
                         <span class="section-sub-title wow fadeInUp">من نحن</span>
-                        <h2 data-cursor="-opaque">ملتزمون بحماية منزلك من الآفات</h2>
+                        <h2 data-cursor="-opaque">ملتزمون بحماية منزلك وشركتك من الآفات</h2>
                         <p class="wow fadeInUp" data-wow-delay="0.2s">
-                            ملتزمون بحماية منزلك من الآفات. مهمتنا هي تقديم حلول شاملة وموثوقة لمكافحة الآفات تضمن سلامة وراحة منزلك.
+                            نلتزم بحماية منزلك وشركتك من جميع أنواع الآفات. مهمتنا هي تقديم حلول شاملة وموثوقة لمكافحة الآفات تضمن السلامة والراحة في المنازل والمنشآت التجارية.
+
                         </p>
                     </div>
 
@@ -186,7 +187,7 @@
                     <div class="about-us-info-box wow fadeInUp" data-wow-delay="0.4s">
 
                         <div class="about-us-info-content">
-                            <p>ملتزمون بحماية منزلك من الآفات - مهمتنا هي تقديم حلول شاملة.</p>
+                            <p>نقدم خدمات متكاملة لحماية المنازل والمنشآت التجارية من الآفات باستخدام أحدث التقنيات.</p>
 
                             <ul>
                                 <li>فنيون ذوو خبرة</li>
@@ -249,7 +250,7 @@
                                 </div>
                                 <div class="why-choose-item-content">
                                     <h3>أسعار شفافة</h3>
-                                    <p>تم تصميم خدمات مكافحة الآفات لدينا لتكون آمنة للأطفال، مما يضمن السلامة.</p>
+                                    <p>نوضح تكلفة الخدمة بعد المعاينة وتحديد نوع الإصابة، مع الالتزام بمعايير واضحة وثابتة لتقديم أسعار عادلة وشفافة دون أي تكاليف مخفية.</p>
                                 </div>
                             </div>
                             <!-- Why Choose Item End -->
@@ -350,7 +351,7 @@
                         <div class="feature-item-list">
                             <ul>
                                 <li>منتجات مختبرة بعناية</li>
-                                <li>معايير خدمة عائلية</li>
+                                <li>مواكبة الطرق والمعايير العالمية</li>
                             </ul>
                         </div>
                     </div>
@@ -365,12 +366,12 @@
                         </div>
                         <div class="feature-item-content">
                             <h3>خدمة في نفس اليوم</h3>
-                            <p>نستخدم مواد مختارة بعناية تكون فعّالة ضد الآفات وفي نفس الوقت آمنة.</p>
+                            <p>سرعة في الاستجابة لأي طارئ، مع الالتزام بالدقة في المواعيد.</p>
                         </div>
                         <div class="feature-item-list">
                             <ul>
-                                <li>حلول معتمدة وآمنة للأطفال</li>
-                                <li>تطبيقات آمنة داخل الأماكن المغلقة</li>
+                                <li>الرد على الاستفسارات والاتصالات بسرعة</li>
+                                <li>شرح آلية العمل وتحديد موعد الزيارة بوضوح</li>
                             </ul>
                         </div>
                     </div>
@@ -385,12 +386,12 @@
                         </div>
                         <div class="feature-item-content">
                             <h3>أسعار شفافة</h3>
-                            <p>نستخدم مواد مختارة بعناية تكون فعّالة ضد الآفات وفي نفس الوقت آمنة.</p>
+                                <p>نحرص على الشفافية الكاملة في تسعير خدمات مكافحة الآفات، حيث يتم تحديد التكلفة بعد المعاينة الميدانية وتقييم الحالة بدقة، مع تطبيق معايير ثابتة وواضحة لتحديد الأسعار بما يضمن العدالة والوضوح للعميل.</p>
                         </div>
                         <div class="feature-item-list">
                             <ul>
-                                <li>طرق تقليل التعرض</li>
-                                <li>علاجات تراعي الصحة</li>
+                                <li>أسعار منافسة مع نتائج ممتازة</li>
+                                <li>معايير واضحة وعادلة لتحديد التكلفة</li>
                             </ul>
                         </div>
                     </div>
@@ -469,7 +470,7 @@
                                 </figure>
                             </div>
                             <div class="protection-item-content">
-                                <h3>بق الفراش</h3>
+                                <h3>خنفساء السوس</h3>
                             </div>
                         </div>
                         <!-- Protection Item End -->
@@ -532,7 +533,7 @@
                                     <img src="images/icon-protection-counter-item-2.svg" alt="">
                                 </div>
                                 <div class="protection-counter-item-content">
-                                    <h2><span class="counter">4.5</span> ألف</h2>
+                                    <h2><span class="counter">4500</span></h2>
                                     <p>الصراصير موجودة في جميع أنحاء العالم</p>
                                 </div>
                             </div>
@@ -582,18 +583,12 @@
                         <div class="section-title">
                             <span class="section-sub-title wow fadeInUp">عملية مكافحة الآفات</span>
                             <h2 data-cursor="-opaque">عملية مكافحة الآفات لدينا لنتائج آمنة وفعالة</h2>
-                            <p class="wow fadeInUp" data-wow-delay="0.2s">يستخدم فنيوّنا ذوو الخبرة طرقًا مجرّبة وعلاجات صديقة للبيئة لتقديم نتائج موثوقة وطويلة الأمد، مع أسعار شفافة.</p>
+                            <p class="wow fadeInUp" data-wow-delay="0.2s">نستخدم مبيدات آمنة وموثوقة وبتكلفة مناسبة، مع الالتزام بأعلى معايير الجودة والسلامة.
+نعتمد على نظام المكافحة المتكاملة للآفات (IPM) لتقليل استخدام المبيدات وتحقيق نتائج فعالة وطويلة الأمد.
+</p>
                         </div>
                         <!-- Section Title End -->
 
-                        <!-- Process Body List Start -->
-                        <div class="process-body-list wow fadeInUp" data-wow-delay="0.4s">
-                            <ul>
-                                <li>فنيون ذوو خبرة</li>
-                                <li>الوقاية والمراقبة على المدى الطويل</li>
-                            </ul>
-                        </div>
-                        <!-- Process Body List End -->
 
                         <!-- Process Step Item List Start -->
                         <div class="process-step-item-list wow fadeInUp" data-wow-delay="0.6s">
@@ -604,7 +599,7 @@
                                 </div>
                                 <div class="process-step-item-content">
                                     <h3>الفحص</h3>
-                                    <p>تحديد نشاط الآفات ونقاط الدخول.</p>
+                                    <p>تحديد نوع الآفات، مستوى انتشارها، ونقاط الدخول المحتملة بدقة، مع تحليل نشاط الآفات كأساس لوضع خطة مكافحة فعالة.</p>
                                 </div>
                             </div>
                             <!-- Process Step Item End -->
@@ -616,7 +611,7 @@
                                 </div>
                                 <div class="process-step-item-content">
                                     <h3>خطة العلاج</h3>
-                                    <p>تحديد نشاط الآفات ونقاط الدخول.</p>
+                                    <p>تحديد أنواع المبيدات الآمنة والموثوقة وطرق المكافحة المتكاملة (IPM) المناسبة حسب نوع الإصابة، بهدف تقليل استخدام المبيدات وتحقيق نتائج فعالة وطويلة الأمد بتكلفة مناسبة.</p>
                                 </div>
                             </div>
                             <!-- Process Step Item End -->
@@ -628,7 +623,7 @@
                                 </div>
                                 <div class="process-step-item-content">
                                     <h3>التطبيق الآمن</h3>
-                                    <p>تحديد نشاط الآفات ونقاط الدخول.</p>
+                                    <p>تطبيق خطة المكافحة باحتراف مع الالتزام بمعايير السلامة، ومتابعة ما بعد الخدمة لمراقبة النتائج وضمان استمرارية الحماية، خاصة للمنشآت التجارية.</p>
                                 </div>
                             </div>
                             <!-- Process Step Item End -->
@@ -673,14 +668,20 @@
                         <!-- About Footer Content Start -->
                         <div class="about-footer-content">
                             <h2>عن شركتنا</h2>
-                            <p>نحن شركة موثوقة تقدم خدمات مكافحة الآفات مع حلول آمنة وفعالة للمنازل والشركات.</p>
+                                    <p>
+                                    شركة رائدة في مجال مكافحة الآفات والوقاية منها، تقدم خدماتها للأنشطة التجارية والمنشآت والمنازل، بخبرة صلبة ورؤية شبابية طموحة، تسعى لبناء صرح متين في السوق المحلي.
+                                    </p>
                         </div>
                         <!-- About Footer Content End -->
 
                         <!-- Footer Social links Start -->
                         <div class="footer-social-links">
                             <ul>
-                                <li><a href="https://www.facebook.com/people/%25D8%25B4%25D8%25B1%25D9%2583%25D8%25A9-%25D8%25AD%25D9%2585%25D8%25A7%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A8%25D9%258A%25D8%25A6%25D8%25A9-%25D9%2584%25D9%2585%25D9%2583%25D8%25A7%25D9%2581%25D8%25AD%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A2%25D9%2581%25D8%25A7%25D8%25AA/61579325938061/?rdid=eGVCS2FJ2Xvgej39&share_url=https%253A%252F%252Fwww.facebook.com%252Fshare%252F17xwUfYVzc%252F"><i class="fa-brands fa-facebook-f"></i></a></li>
+<li>
+    <a href="https://www.facebook.com/people/%25D8%25B4%25D8%25B1%25D9%2583%25D8%25A9-%25D8%25AD%25D9%2585%25D8%25A7%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A8%25D9%258A%25D8%25A6%25D8%25A9-%25D9%2584%25D9%2585%25D9%2583%25D8%25A7%25D9%2581%25D8%25A9-%25D8%25A7%25D9%2584%25D8%25A2%25D9%2581%25D8%25A7%25D8%25AA/61579325938061/?rdid=eGVCS2FJ2Xvgej39&share_url=https%253A%252F%252Fwww.facebook.com%252Fshare%252F17xwUfYVzc%252F">
+        <i class="fa-brands fa-facebook-f" style="font-size: 2em;"></i>
+    </a>
+</li>
                             </ul>
                         </div>
                         <!-- Footer Social links End -->
@@ -716,10 +717,10 @@
 				</div>
 				<div class="footer-contact-item-content">
 					<p>اتصل بنا</p>
-                                        <h4>
-                        <span dir="ltr">+218 92-4663890</span>
-                    </a>
-                    </h4>
+                        <h4>
+                            <a href="tel:+218924663890" dir="ltr">+218 92-4663890</a>
+                        </h4>
+
 				</div>
 			</div>
 		</div>
@@ -728,16 +729,19 @@
 </div>
 
 
-                <div class="col-lg-12">
-                    <!-- Footer Cta Box Start -->
-                    <div class="footer-cta-box">
-                        <!-- Footer Logo Start -->
-                        <div class="footer-logo">
-                            <img src="images/logo_real.png" alt="" style="height:55px; width:auto;">
+                    <div class="footer-cta-box d-flex align-items-center justify-content-between flex-wrap">
+
+                        <div class="footer-brand-text">
+                            <h3 style="margin:0; color:#fff;">شركة حماة البيئة</h3>
+                            <p style="margin:0; color:#fff;">حماة البيئة، حماية ووقاية</p>
                         </div>
-                        <!-- Footer Logo End -->
+
+                        <div class="footer-logo">
+                            <img src="images/logo_real.png" alt="" style="height:70px; width:auto;">
+                        </div>
 
                     </div>
+
                     <!-- Footer Cta Box End -->
                 </div>
 
